--- a/oefening-01/index.html
+++ b/oefening-01/index.html
@@ -1,1 +1,11 @@
-MAKE SOME CHANGES (YOU SHOULD PROBABLY WRITE SOME HTMl)
+<!DOCTYPE html>
+<html lang="nl-BE">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
