--- a/oefening-01/index.html
+++ b/oefening-01/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>document</title>
 </head>
 <body>
-    
+<title>Dit is de hoofdtitel</title>
+<h1>Dit is een subtitel</h1>
+<h2>Dit is een volgende subtitel</h2>
 </body>
 </html>
