--- a/oefening-01/index.html
+++ b/oefening-01/index.html
@@ -6,8 +6,11 @@
     <title>document</title>
 </head>
 <body>
-<title>Dit is de hoofdtitel</title>
-<h1>Dit is een subtitel</h1>
+
+<h1>Dit is de hoofdtitel</h1>
+
+<h2>Dit is een subtitel</h2>
+
 <h2>Dit is een volgende subtitel</h2>
 </body>
 </html>
