--- a/oefening-02/index.html
+++ b/oefening-02/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl-BE">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Oefening 04</title>
 </head>
+
+<h1>Titel webpagina</h1>
+
+<p>Pellentesque habitant morbi tristique senectus et netus. Fabio vel iudice vincam, sunt in culpa qui officia.
+A communi observantia non est recendum. Inmensae subtilitatis, obscuris et malesuada fames.
+Ambitioni dedisse scripsisse iudicaretur.
+</p>
+
+<p>Gallia est omnis divisa in partes tres, quarum. Curabitur blandit tempus ardua ridiculus sed magna.
+Quae vero auctorem tractata ab fiducia dicuntur. Quisque ut dolor gravida, placerat libero vel,
+euismod. Quid securi etiam tamquam eu fugiat nulla pariatur. Contra legem facit qui id facit quod 
+lex prohibet.
+</p>
 <body>
     
 </body>
