--- a/oefening-04/index.html
+++ b/oefening-04/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <title>oefening 4</title>
+</head> <h1>Titels zijn belangrijk</h1>
 <body>
-    <p>In deze tekst staat een woord<strong>vetgedrukt</strong> en <em>schuin</em>geplaatst. Een belangrijke wereldwijd gekende regel is E=mc^2</p>
+    <h2>Voor de structuur</h2>
+    <p>In deze tekst staat een woord <strong>vetgedrukt</strong> en <em>schuin</em> geplaatst. Een belangrijke wereldwijd gekende regel is E=mc²</p>
+    <h2>van een document</h2>
+    <p>Wist je dat wanneer je in Visual Sudio  Code 'lorem' typt en dan op de tab-toets duwt, de software voor jou een dummy-tekst plaatst? Volgende keer maar eens proberen dan.</p>
 </body>
 </html>
