--- a/oefening-07/index.html
+++ b/oefening-07/index.html
@@ -11,8 +11,8 @@
         In deze oefening ben jij dat zelf.
     </p>
     
-    <p><em><strong>Joske Vermeulen</strong>
-    <a href="">joske@vermeulen.net</a>
+    <p><em><strong>Joske Vermeulen</strong><br>
+    <a href="">joske@vermeulen.net</a><br>
     <strong>+32 499 88 77 66</strong></em></p>
 </body>
 </html>
