verbetering oef 3 en 4

--- a/oefening-04/index.html
+++ b/oefening-04/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>oefening 4</title>
-</head> <h1>Titels zijn belangrijk</h1>
+</head> 
 <body>
+    <h1>Titels zijn belangrijk</h1>
     <h2>Voor de structuur</h2>
     <p>In deze tekst staat een woord <strong>vetgedrukt</strong> en <em>schuin</em> geplaatst. Een belangrijke wereldwijd gekende regel is E=mc²</p>
     <h2>van een document</h2>
