--- a/oefening-05/index.html
+++ b/oefening-05/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl-BE">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>oefening 5</title>
 </head> <h1>Lorum ipsum dolor</h1>
 <body> <h2>consectetur adipiscing elit</h2>
-    <p>Ooit zei <a href="">Tim Berners-Lee</a>: <q>You affect the world by what you browse.</q>.</p>
-    
+    <p>Ooit zei <a href="https://www.brainyquote.com/quotes/tim_bernerslee_100459">Tim Berners-Lee</a>: <q cite="https://www.brainyquote.com/quotes/tim_bernerslee_100459">You affect the world by what you browse.</q>.</p> 
 </body>
 </html>
