--- a/oefening-06/index.html
+++ b/oefening-06/index.html
@@ -6,11 +6,9 @@
     <title>oefening 06</title>
 </head> <h1>ipsum dolor sit amet</h1>
 <body>
-<p>Een paragraaf tekst <strong><em>kan</em></strong>
-     soms gewoon zinloos zijn, maar deze is dat niet. 
-     Je moet namelijk een woord vet en schuin tegelijk zetten. </p>
-<h2>consectetur adipiscing elit</h2>
-<p>Zorg ervoor dat iedereen weet waar <abbr title="Hypertext Markup Language">HTML</abbr>
-voor staat.</p>
+    <h1>ipsum dolor sit amet</h1>
+    <p>Een paragraaf tekst <strong><em>kan</em></strong>soms gewoon zinloos zijn, maar deze is dat niet. Je moet namelijk een woord vet en schuin tegelijk zetten. </p>
+    <h2>consectetur adipiscing elit</h2>
+    <p>Zorg ervoor dat iedereen weet waar <abbr title="Hypertext Markup Language">HTML</abbr> voor staat.</p>
 </body>
 </html>
