--- a/oefening-07/index.html
+++ b/oefening-07/index.html
@@ -5,14 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>oefening 07</title>
 </head>
- <h1>De auteur</h1>
 <body>
-    <p>Iedere website heeft een auteur die verantwoordelijk is voor alle inhoud.
-        In deze oefening ben jij dat zelf.
-    </p>
-    
-    <p><em><strong>Joske Vermeulen</strong><br>
-    <a href="">joske@vermeulen.net</a><br>
-    <strong>+32 499 88 77 66</strong></em></p>
+    <h1>De auteur</h1>
+    <p>Iedere website heeft een auteur die verantwoordelijk is voor alle inhoud. In deze oefening ben jij dat zelf.</p>
+    <address>Joske Vermeulen<br><a href="mailto:joske@vermeulen.net">joske@vermeulen.net</a><br>+32 499 88 77 66</address>
+
 </body>
 </html>
