--- a/oefening-08/index.html
+++ b/oefening-08/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>oefening 08</title>
-</head><h1>HTML-links</h1>
+</head>
 <body>
+    <h1>HTML-links</h1>
     <p>HTML-links worden gedefinieerd door een tag te gebruiken.
     <br><a href="https://www.ap.be/">Dit is een link naar de website van de AP Hogeschool</a></p>
 </body>
