--- a/oefening-09/index.html
+++ b/oefening-09/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>oefening 09</title>
-</head><h1>Plaats eerst een titel</h1>
+</head>
 <body>
+    <h1>Plaats eerst een titel</h1>
     <h2>Zet daaronder een kleinere titel</h2>
     <p>Deze tekst staat in een paragraaf en bevat een <a href="https://www.w3schools.com" target="_blank">link</a> naar de website van w3schools die opengaat in een apart tabblad in onze browser.</p>
     <p>Een tweede paragraaf. <br>Met een regeleinde erbij.</p>    
